--- a/about.html
+++ b/about.html
@@ -11,18 +11,20 @@
 
 <meta name="description" content="">
 <meta name="keywords" content="">
-
 <meta name="viewport" content="width=device-width">
 <meta name="format-detection" content="telephone=no">
+
 <link rel="stylesheet" type="text/css" href="./css/initialize.css">
 <link rel="stylesheet" type="text/css" href="./css/gridlex.min.css">
 <link rel="stylesheet" type="text/css" href="./css/template.css">
 <link rel="stylesheet" type="text/css" href="./css/content.css">
 <link rel="stylesheet" type="text/css" href="./css/font-awesome4.min.css">
+<link rel="stylesheet" type="text/css" href="./css/aos.css">
 
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/ofi.min.js"></script>
+<script src="./js/aos.js"></script>
 
 </head>
 
@@ -68,14 +70,14 @@
 <main id="main" class="main">
 
     <!-- pagettl -->
-    <div id="pagettl" class="wrap">
+    <div id="pagettl" class="wrap" data-aos="flip-left" data-aos-duration="1000">
         <h1>ABOUT</h1>
     </div>
     <!-- //pagettl -->
 
 
     <!-- overview -->
-    <section id="overview" class="wrap">
+    <section id="overview" class="wrap" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="500">
         <h2>会社概要</h2>
         <table>
             <tr>
@@ -119,7 +121,7 @@
 
 
     <!-- access -->
-    <section id="access" class="wrap">
+    <section id="access" class="wrap" data-aos="zoom-in-up" data-aos-duration="1000">
         <h2>アクセスマップ</h2>
         <div id="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.66804189514!2d139.75060545048237!3d35.685174980096235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c0d02d8064d%3A0xd11a5f0b379e6db7!2z55qH5bGF!5e0!3m2!1sja!2sjp!4v1556291918005!5m2!1sja!2sjp" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -147,6 +149,10 @@
 <!-- //footer -->
 
 
+
+<script>
+    AOS.init();
+</script>
 </body>
 
 
