--- a/template.html
+++ b/template.html
@@ -11,18 +11,20 @@
 
 <meta name="description" content="">
 <meta name="keywords" content="">
-
 <meta name="viewport" content="width=device-width">
 <meta name="format-detection" content="telephone=no">
+
 <link rel="stylesheet" type="text/css" href="./css/initialize.css">
 <link rel="stylesheet" type="text/css" href="./css/gridlex.min.css">
 <link rel="stylesheet" type="text/css" href="./css/template.css">
 <link rel="stylesheet" type="text/css" href="./css/content.css">
 <link rel="stylesheet" type="text/css" href="./css/font-awesome4.min.css">
+<link rel="stylesheet" type="text/css" href="./css/aos.css">
 
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/ofi.min.js"></script>
+<script src="./js/aos.js"></script>
 
 </head>
 
@@ -138,6 +140,10 @@
 <!-- //footer -->
 
 
+
+<script>
+    AOS.init();
+</script>
 </body>
 
 
