UPDATE: Add links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="header__top">
         <div class="wrap">
             <div id="logo">
-                <a href="#"><img src="./img/template/logo_white.svg" alt="Sample design"></a>
+                <a href="index.html"><img src="./img/template/logo_white.svg" alt="Sample design"></a>
             </div>
         </div>
         
@@ -55,8 +55,8 @@
     <nav id="gnav">
         <div class="wrap">
             <ul class="grid-noGutter-equalHeight grid-noGutter-equalHeight_md-1">
-                <li class="col"><a href="#">HOME</a></li>
-                <li class="col"><a href="#">ABOUT</a></li>
+                <li class="col"><a href="index.html">HOME</a></li>
+                <li class="col"><a href="about.html">ABOUT</a></li>
                 <li class="col"><a href="#">SERVICES</a></li>
                 <li class="col"><a href="#">NEWS</a></li>
                 <li class="col"><a href="#">CONTACT</a></li>
